# hAPIness

./: README.md  manage.py  pyproject.toml  requirements.txt
API_settings/: asgi.py  settings.py  urls.py  wsgi.py
authentification/: models.py  serializers.py  views.py
authentification/migrations/: 0001_initial.py  0002_remove_user_age.py  0003_user_age.py  0004_rename_rgpd_consent_user_can_be_contacted_and_more.py
hAPIness/: asgi.py  settings.py  urls.py  wsgi.py
projects/: models.py  permissions.py  serializers.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_comment_comment_comment_description.py
