[project]
name = "hapiness"
version = "0.1.0"
description = "API for creating and tracking technical issues"

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==5.1.4)",
    "django-rest-framework (==0.1.0)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.4.0)",
    "flake8 (==7.1.1)",
    "isort (==6.0.0)",
    "mccabe (==0.7.0)",
    "pycodestyle (==2.12.1)",
    "pyflakes (==3.2.0)",
    "pyjwt (==2.10.1)",
    "sqlparse (==0.5.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
